<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="test.valeriano.mx.tarea.MainActivity">

    <EditText
        android:id="@+id/activity_main_user"
        android:hint="@string/hintUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_main_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/activity_main_user"
        android:hint="@string/hintPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="16dp"
        android:layout_below="@+id/activity_main_password"
        android:id="@+id/activity_main_chkRememberMe"
        android:text="@string/rememberCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="16dp"
        android:layout_below="@+id/activity_main_chkRememberMe"
        android:id="@+id/activity_main_chkHardCodeLogin"
        android:text="@string/hardCodeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_below="@+id/activity_main_chkHardCodeLogin"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:visibility="visible"
            android:id="@+id/activity_main_btnRegistrerLogin"
            android:text="@string/btnRegistrerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/btnLogin"
            android:id="@+id/activity_main_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
